# ValArhivater

./: .gitignore  CMakeLists.txt  README.md  ValArhivater.desktop
include/: archiver.h  mainwindow.h  settingsdialog.h
resources/: mainwindow.ui
resources/extractor/: extractor.qrc  sfx.sh
resources/icons/: icons.qrc
src/: archiver.cpp  main.cpp  mainwindow.cpp  settingsdialog.cpp
